--- a/order-service/order-container/pom.xml
+++ b/order-service/order-container/pom.xml
@@ -19,5 +19,22 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>com.food.ordering.system</groupId>
+      <artifactId>order-application-service</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.food.ordering.system</groupId>
+      <artifactId>order-domain-core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.food.ordering.system</groupId>
+      <artifactId>order-dataaccess</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.food.ordering.system</groupId>
+      <artifactId>order-messaging</artifactId>
+    </dependency>
   </dependencies>
 </project>
