--- a/common/common-domain/pom.xml
+++ b/common/common-domain/pom.xml
@@ -1,18 +1,16 @@
 <?xml version="1.0"?>
-<project
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd"
-  xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>com.food.ordering.system</groupId>
-    <artifactId>order-domain</artifactId>
+    <artifactId>common</artifactId>
     <version>1.0-SNAPSHOT</version>
   </parent>
   <groupId>com.food.ordering.system</groupId>
-  <artifactId>order-domain-core</artifactId>
+  <artifactId>common-domain</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <name>order-domain-core</name>
+  <name>common-domain</name>
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
