--- a/order-service/order-domain/order-domain-core/pom.xml
+++ b/order-service/order-domain/order-domain-core/pom.xml
@@ -16,6 +16,10 @@
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
+      <groupId>com.food.ordering.system</groupId>
+      <artifactId>common-domain</artifactId>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
